# putt-it

./: .gitignore  CMakeLists.txt  LICENSE  RELEASE.md  conanfile.py
.github/workflows/: release.yml  tests.yml
code/core/: CMakeLists.txt  conversion.cpp  conversion.h
code/main/: CMakeLists.txt  main.cpp
code/tests/: CMakeLists.txt  SDLTests.cpp  conversionTests.cpp  main.cpp
